# DAU-software-tool

./: .gitignore  100steps_sim_dau_active_inference.py  LICENSE  PROFESSIONALIZATION_REPORT.md  README.md  README_DAU_V2.md  VFE_100_steps.csv  VFE_50_steps.csv  requirements.txt
BATTERY DESIGN FEP/: README.md  inverse_markov_blanket_battery_improved_final_nondeps.py  inverse_markov_blanket_battery_rigorous_report.json  inverse_markov_blanket_battery_rigorous_summary.txt  requirements.txt
BECK AND RAMSTEAD INVERSION/: index.html
BECK AND RAMSTEAD INVERSION 2/: README.md
BECK AND RAMSTEAD INVERSION 3/: README.md
BECK AND RAMSTEAD INVERSION ALG/: README.docx  package.json
Beck and Ramstead alg Inversion 1/: package-lock.json
DAU V2/: README_DAU_V2.md  config.py
DAU V2 DASHBOARD/: README_DASHBOARD.md
DAU V3 DASHBOARD/: README.md  __init__.py  agents.py  dau_v3_dashboard.html  inference.py  main.py  server_v3.py
DAU advanced version/: README.md  __init__.py  agents.py  env_smartphone.py  inference.py  plotting.py  self_check.py
DAU model rigid designer/: README (1).md
EFE-calculation in DAU/: README.md  (+1 more)
EMERGENT CONDUIT FEP -github-package/: README.md  pyproject.toml
EMERGENT CONDUIT FEP -github-package/examples/: history_passive.csv  summary.csv
EMERGENT CONDUIT FEP -github-package/src/emergent_conduit_fep/: __init__.py
JOULE ACTIVE INFERENCE MODEL/: LICENSE  README.md  pyproject.toml  run_comparison.py  setup.py
JOULE ACTIVE INFERENCE MODEL/dmbd_joule/: blanket.py  comparison_plots.py  controllers.py  metrics.py  plots.py  system.py  vbem.py
(+54 files in other folders)
