[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-conduit-fep"
version = "0.1.0"
description = "A Beck-Ramstead-inspired, FEP-guided simulation in which a conduit-like blanket emerges from designer-shaped electron flow."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI Assistant"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.scripts]
emergent-conduit-fep = "emergent_conduit_fep.simulation:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
